# effitask

./: Cargo.toml  build.rs  install.sh
src/: agenda.rs  done.rs  edit.rs  flag.rs  inbox.rs  logger.rs  main.rs  search.rs
src/application/: mod.rs
src/widgets/: calendar.rs  circle.rs  filter.rs  keywords.rs  priority.rs  recurrence.rs  tags.rs  task.rs  tasks.rs
