[package]
name = "effitask"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
homepage = "https://github.com/linruohan/effitask"
edition = "2024"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0.95"
envir = "1.0"
human-panic = "2.0"
notify = "8.0.0"
pulldown-cmark = "0.12"
rand = "0.8"
regex = "1.0"
relm4 = { git = "https://github.com/Relm4/Relm4.git", rev = "e24915ac03e5ef1ec6f489ac7aeb26ec009f1618" }
relm4-components = "0.9"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_16"]

[dependencies.log]
version = "0.4.24"
features = ["std"]

[dependencies.todo-txt]
version = "4.1"
features = ["config", "extended"]

[build-dependencies]
glib-build-tools = "0.20"
anyhow = "1.0.94"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.17"

[patch.crates-io]

[profile.dev]
debug = true
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# We want to be able to debug in the release build as well
debug = true
